<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/txt_color"
            android:background="#4D000000"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_food_img"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_bg_photo" />
            <TextView
                android:id="@+id/detail_link"
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:maxLength="10"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/more_photos"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/detail_food_name"
                style="@style/TextContent.Small.White"
                android:layout_gravity="left"
                android:layout_marginStart="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
            <TextView
                style="@style/TextContent.Small.White"
                android:layout_gravity="left"
                android:layout_marginStart="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="120dp"
                android:text="@string/harga"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/detail_food_price"
                style="@style/TextContent.Small.White"
                android:layout_gravity="left"
                android:layout_marginStart="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="190dp"
                android:text="Rp.15.000"
                android:drawablePadding="4dp"
                android:background="#4D000000"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/txt_color" />
            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="275dp"
                android:scaleX="1.9"
                android:scaleY="1.9"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:numStars="5"
                android:rating="4"
                android:isIndicator="true"/>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/desc_title"
                style="@style/TextSpec.Field"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description" />
            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/this_is_description"
                android:id="@+id/detail_food_detail"
                android:layout_below="@id/desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp" />
            <TextView
                android:id="@+id/recipe_title"
                style="@style/TextSpec.Field"
                android:layout_below="@+id/detail_food_detail"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recipe" />
            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/this_is_recipe"
                android:id="@+id/detail_food_recipe"
                android:layout_below="@id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>